--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Run Park Reservation Checker
+name: Run Bot
 
 on:
   workflow_dispatch:  # Allows manual runs
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 30 minutes
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
 
 jobs:
   run-script:
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install requests
+        run: pip install schedule
 
       - name: Run the Python script
         env:
