--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests
-        run: pip install schedule
+        run: pip install -r requirements.txt
 
       - name: Run the Python script
         env:
