--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Run the Python script
         env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          BOT_KEY: ${{ secrets.BOT_KEY }}
+          CHAT_KEY: ${{ secrets.CHAT_KEY }}
+          GROUP_KEY: ${{ secrets.GROUP_KEY }}
         run: python script.py
