change cron job to execute script 10 times in single workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,9 @@ jobs:
           BOT_KEY: ${{ secrets.BOT_KEY }}
           CHAT_KEY: ${{ secrets.CHAT_KEY }}
           GROUP_KEY: ${{ secrets.GROUP_KEY }}
-        run: python script.py
+        run: |
+          for i in {1..10}
+          do
+            python script.py
+            sleep 30  # Wait for 30 seconds between runs
+          done
